# iSTSi

./: .dockerignore  .env.development  .gitignore  CHANGELOG.md  COMPATIBILITY_MATRIX.md  CONTRIBUTING.md  DEPENDENCY_OPTIMIZATION_SUMMARY.md  DEVELOPMENT_STANDARDS.md  DEVELOPMENT_WORKFLOWS.md  Dockerfile.test-runner  LESSONS_LEARNED.md  MIGRATION_GUIDE.md  MIGRATION_GUIDES.md  MIGRATION_VALIDATION_REPORT.md  Makefile  Makefile.deps  ONBOARDING.md  README4BitconCustodyFullStackApp.md  RELEASE_PROCESS.md  ReadMe-DEVELOPMENT.md  SETUP_?.md  TESTING.md  TROUBLESHOOTING.md  build-optimization.config.json  dependency-versions.json  docker-compose.override.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  monitor-config.json  release-config.json  version-config.json
backend/: .env.example  Cargo.optimized.toml  Cargo.toml  DATABASE.md  Dockerfile.dev  README-backend.md
backend/config/: development.yaml  production.yaml  staging.yaml  test-development.yaml  test.yaml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_users.rs  m20240101_000002_create_kyc_records.rs  m20240101_000003_create_token_balances.rs  m20240101_000004_create_operations.rs  m20240101_000005_create_audit_logs.rs
backend/scripts/: backup-db.sh  build-performance.sh  setup-db.sh
backend/src/: app.rs  config.rs  lib.rs  main.rs
backend/src/commands/: database.rs
backend/src/controllers/: auth.rs  integration.rs  kyc.rs  mod.rs  reserves.rs  system.rs  tokens.rs  users.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs
backend/src/models/: audit_log.rs  kyc_record.rs  mod.rs  operation.rs  token_balance.rs  user.rs
backend/src/models/_entities/: kyc_records.rs  mod.rs  operations.rs  prelude.rs  token_balances.rs  users.rs
backend/src/seeders/: mod.rs
backend/src/services/: config_backup_service.rs  config_consistency_service.rs  config_service.rs  config_validation_service.rs  event_monitor_service.rs  integration_service.rs  kyc_service.rs  mod.rs  reserve_service.rs  secret_service.rs  security_service.rs  soroban_client.rs  token_service.rs
backend/src/utils/: database.rs
backend/src/workers/: event_monitor.rs  mod.rs  proof_generation.rs  reconciliation.rs
backend/tests/: debug_address.rs  lib.rs  soroban_integration.rs  soroban_integration_fixed.rs
backend/tests/fixtures/: mod.rs
backend/tests/integration/: full_stack_test.rs  mod.rs
backend/tests/unit/: mod.rs
backend/tests/unit/controllers/: auth_test.rs  mod.rs
backend/tests/unit/services/: integration_service_test.rs  mod.rs
soroban/: Cargo.optimized.toml  Cargo.toml  DeploymentAddress_iSHSi.md  README-soroban.md  SETUP.md
soroban/client/: Cargo.toml
soroban/client/src/: address_config.rs  contract_manager.rs  event_monitor.rs  integration_router_client.rs  istsi_token_client.rs  kyc_registry_client.rs  lib.rs  mod.rs  reserve_manager_client.rs
soroban/config/: contract_addresses.json  network_config.toml  networks.yaml
soroban/config/environments/: deployment_config.json  production_config.json  upgrade_config.json
soroban/contracts/: iSTSi_v2.rs
soroban/contracts/fungible/: Cargo.toml
soroban/contracts/fungible/src/: contract.rs  test.rs
soroban/contracts/fungible/test_snapshots/test/: initial_state.1.json
soroban/contracts/integration_router/: Cargo.toml  EXCHANGE_LIMITS_IMPLEMENTATION.md
soroban/contracts/integration_router/src/: admin_dashboard_test.rs  api_layer.rs  api_versioning.rs  bitcoin_deposit_integration_test.rs  bitcoin_deposit_test.rs  circuit_breaker.rs  config_test.rs  cross_contract_test.rs  cross_token_exchange_test.rs  deployment_test.rs  error_handling.rs  exchange_limits_compliance_test.rs  lib.rs  monitoring.rs  oracle_integration_test.rs  real_cross_contract_test.rs  reconciliation_test.rs  retry_logic.rs  rollback_procedures.rs  simple_admin_test.rs  simple_bitcoin_deposit_test.rs  simple_cross_token_test.rs  simple_exchange_limits_test.rs  simple_oracle_test.rs  simple_reconciliation_test.rs  simple_withdrawal_test.rs  test.rs  token_withdrawal_integration_test.rs  unified_queries.rs  upgrade_test.rs
soroban/contracts/integration_router/src/integration_tests/: end_to_end_tests.rs  failure_scenario_tests.rs  mod.rs  performance_tests.rs  test_utils.rs
soroban/contracts/integration_router/test_snapshots/test/: test_contract_address_registry.1.json  test_emergency_pause_by_admin.1.json  test_emergency_pause_by_compliance_officer.1.json  test_emit_integration_event.1.json  test_event_subscription.1.json  test_event_subscription_by_event_type.1.json  test_event_subscription_by_user.1.json  test_get_event_history.1.json  test_initialize.1.json  test_initialize_twice_fails.1.json  test_multiple_event_types.1.json  test_resume_operations.1.json  test_role_hierarchy.1.json  test_role_management.1.json  test_update_contract_address.1.json
soroban/contracts/istsi_token/: Cargo.toml  INTEGRATION_FEATURES.md
soroban/contracts/istsi_token/src/: lib.rs
soroban/contracts/istsi_token/test_snapshots/test/: test_compliance_transfer.1.json  (+6 more)
soroban/contracts/kyc_registry/: Cargo.toml
soroban/contracts/kyc_registry/src/: lib.rs
soroban/contracts/reserve_manager/: Cargo.toml
soroban/contracts/reserve_manager/src/: lib.rs
soroban/docs/: contract_abis.md  integration_guide.md
soroban/scripts/: build-ci.sh  build-dev.sh  build-performance.sh  build.sh  config-manager.sh  contract-utils.sh  contract_registry.rs  deploy-mainnet.sh  deploy-testnet.sh  deploy_integration.sh  deploy_production.sh  test.sh  update_registry.sh
soroban/shared/: Cargo.toml
soroban/shared/src/: errors.rs  events.rs  lib.rs  types.rs  utils.rs
soroban/tests/: bitcoin_deposit_test.rs  cross_token_test.rs  integration_test.rs
soroban/tests/unit/: kyc_registry_test.rs  mod.rs
soroban/tools/: Cargo.toml  README.md
soroban/tools/config/: config_manager.rs
soroban/tools/deployment/: deployment_orchestrator.rs  deployment_verification.sh
soroban/tools/upgrade/: contract_upgrade_manager.rs
(+170 files in other folders)
