[package]
name = "bitcoin-custody-backend"
version = "1.0.0"
edition = "2021"
authors = ["Bitcoin Custody Team"]
description = "Bitcoin custody backend with Loco.rs framework"
license = "Apache-2.0"

# Build optimization settings
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = "symbols"

# Fast development builds
[profile.dev-fast]
inherits = "dev"
opt-level = 1
incremental = true
debug-assertions = false

# Release with debug info for profiling
[profile.release-debug]
inherits = "release"
debug = true
strip = "none"

# Test profile optimizations
[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[dependencies]
loco-rs = { version = "0.2", features = ["with-db", "testing"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
migration = { path = "./migration" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
soroban-sdk = "22.0.8"
stellar-strkey = "0.0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
axum = "0.7"
sidekiq = "0.10"
rust_decimal = "1.32"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
thiserror = "1.0"
base64 = "0.21"
md5 = "0.7"
regex = "1.10"
whoami = "1.4"
serde_yaml = "0.9"

[dev-dependencies]
tower-test = "0.4"
serial_test = "3.0"