[package]
name = "soroban-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Client library for Bitcoin custody Soroban contracts"

[dependencies]
soroban-sdk.workspace = true
stellar-strkey.workspace = true
hex.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Local dependencies
shared = { path = "../shared" }

[features]
default = []
async = ["tokio", "reqwest", "uuid", "chrono"]

[dev-dependencies]
tokio-test = "0.4"