[package]
name = "istsi-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deployment_orchestrator"
path = "deployment/deployment_orchestrator.rs"

[[bin]]
name = "contract_upgrade_manager"
path = "upgrade/contract_upgrade_manager.rs"

[[bin]]
name = "config_manager"
path = "config/config_manager.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"