[package]
name = "istsi_token"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
stellar-access.workspace = true
stellar-contract-utils.workspace = true
stellar-macros.workspace = true
stellar-tokens.workspace = true
shared = { path = "../../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]