[package]
name = "kyc-registry"
version.workspace = true
authors = []
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
